Change Program to work with new AppHost Aplication.

--- a/Itsomax.Module.Core.csproj
+++ b/Itsomax.Module.Core.csproj
@@ -20,4 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\Itsomax.Data.Infrastructure\Itsomax.Data.Infrastructure.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="NToastNotify" Version="3.0.1" />
+  </ItemGroup>
 </Project>
