--- a/Itsomax.Module.Core.csproj
+++ b/Itsomax.Module.Core.csproj
@@ -9,13 +9,14 @@
     <PackageLicenseUrl>https://github.com/MathiasKowoll/Itsomax.Module.Core/blob/master/LICENSE.md</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/MathiasKowoll/Itsomax.Module.Core</PackageProjectUrl>
     <RepositoryUrl>https://github.com/MathiasKowoll/Itsomax.Module.Core</RepositoryUrl>
-    <Version>2.0-preview1</Version>
-    <PackageReleaseNotes>Change from Module_Table into one schema to Module.Table (schema.table) format using Camel Case and removing from module name the words Management and System</PackageReleaseNotes>
+    <Version>2.0.1-preview1</Version>
+    <PackageReleaseNotes>move to .net core 2.1 preview1, minor fixes and change in services injection, update ntoast to 5.0</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Update="Microsoft.NETCore.App" Version="2.1.0-preview1-26216-03" />
     <PackageReference Include="Hangfire" Version="1.7.0-beta1" />
     <PackageReference Include="Hangfire.PostgreSql" Version="1.4.8.1" />
+    <PackageReference Include="Itsomax.Data.Infrastructure" Version="2.0.3-preview1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="2.1.0-preview1-final" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.0-preview1-final" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.0-preview1-final" />
@@ -27,9 +28,6 @@
     <PackageReference Include="NPOI.Core.Extension" Version="1.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.5.0-preview1-26216-02" />
     <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
-    <PackageReference Include="NToastNotify" Version="4.0.4" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Libraries\Itsomax.Data.Infrastructure\Itsomax.Data.Infrastructure.csproj" />
+    <PackageReference Include="NToastNotify" Version="5.0.0" />
   </ItemGroup>
 </Project>
